# opencv

./: CMakeLists.txt
cmake/: OpenCVModule.cmake
modules/core/: CMakeLists.txt
modules/node/: CMakeLists.txt  common.cmake
modules/node/node/: CMakeLists.txt
modules/node/src2/: cv2.cpp  gen2.py
